--- a/release-notes/4.7.28.md
+++ b/release-notes/4.7.28.md
@@ -17,8 +17,8 @@ Released December 6, 2017
 | Alter the API?                                              |         |
 | Require attention to configuration options?                 |         |
 | Fix problems installing or upgrading to a previous version? |         |
-| Introduce features?                                         |         |
-| Fix bugs?                                                   |         |
+| **Introduce features?**                                     | **yes** |
+| **Fix bugs?**                                               | **yes** |
 
 ## <a name="features"></a>Features
 
@@ -56,39 +56,90 @@ Released December 6, 2017
 
   This offers a slight adjustment to the markup for menu item icons.
 
-- **[CRM-21262](https://issues.civicrm.org/jira/browse/CRM-21262) Add a check for incorrect Resource URL ([11067](https://github.com/civicrm/civicrm-core/pull/11067))**
+- **[CRM-21262](https://issues.civicrm.org/jira/browse/CRM-21262) Add a check
+  for incorrect Resource URL
+  ([11067](https://github.com/civicrm/civicrm-core/pull/11067))**
 
-- **[CRM-20903](https://issues.civicrm.org/jira/browse/CRM-20903) Improve ordering of dedupe rules ([11109](https://github.com/civicrm/civicrm-core/pull/11109) and [11098](https://github.com/civicrm/civicrm-core/pull/11098))**
+  A message will now appear on the Status Report if a site's CiviCRM Resource
+  URL is set incorrectly.
 
-- **[CRM-21282](https://issues.civicrm.org/jira/browse/CRM-21282) Improve ordering of CiviMail click reporting ([11099](https://github.com/civicrm/civicrm-core/pull/11099))**
+- **[CRM-20903](https://issues.civicrm.org/jira/browse/CRM-20903) Improve
+  ordering of dedupe rules
+  ([11109](https://github.com/civicrm/civicrm-core/pull/11109) and
+  [11098](https://github.com/civicrm/civicrm-core/pull/11098))**
 
-- **[CRM-20304](https://issues.civicrm.org/jira/browse/CRM-20304) Add option to alphabetize option values ([11045](https://github.com/civicrm/civicrm-core/pull/11045))**
+  Duplicate matching rules are now displayed in a consistent order: first the
+  supervised and unsupervised rules, and then the general use rules in
+  alphabetical order by title.
 
-- **[CRM-21179](https://issues.civicrm.org/jira/browse/CRM-21179) Dashlet - Charts ([11005](https://github.com/civicrm/civicrm-core/pull/11005))**
+- **[CRM-20304](https://issues.civicrm.org/jira/browse/CRM-20304) Add option to
+  alphabetize option values
+  ([11045](https://github.com/civicrm/civicrm-core/pull/11045))**
 
-- **[CRM-21275](https://issues.civicrm.org/jira/browse/CRM-21275) Fatal error without message should recommend bug-reporting page, instead of deprecated forum ([11084](https://github.com/civicrm/civicrm-core/pull/11084))**
+  Custom field options can now be alphabetized in one click.
 
-- **[CRM-441](https://issues.civicrm.org/jira/browse/CRM-441) Tag and Group Assignment During Contact Add/Edit ([10942](https://github.com/civicrm/civicrm-core/pull/10942))**
+- **[CRM-21179](https://issues.civicrm.org/jira/browse/CRM-21179) Dashlet -
+  Charts ([11005](https://github.com/civicrm/civicrm-core/pull/11005))
+  (preliminary work)**
 
-- **[CRM-21122](https://issues.civicrm.org/jira/browse/CRM-21122) Support selection of smart groups on Contact Dashboard ([10925](https://github.com/civicrm/civicrm-core/pull/10925))**
+  CiviCRM now ships with the dc.js, d3.js, and crossfilter.js libraries.  These
+  historically have been provided by the Civisualize extension, but they are now
+  available for report developers who don't want the full set of Civisualize
+  features.
+
+- **[CRM-21122](https://issues.civicrm.org/jira/browse/CRM-21122) Support
+  selection of smart groups on Contact Dashboard
+  ([10925](https://github.com/civicrm/civicrm-core/pull/10925))**
+
+  Smart Groups with Public Pages visibility are now available for users to join
+  them through the User Dashboard.
+
+### CiviCase
+
+- **[CRM-20078](https://issues.civicrm.org/jira/browse/CRM-20078) Activity card -
+  General ([11159](https://github.com/civicrm/civicrm-core/pull/11159))**
+
+  The "File on case" button is improved so that it does not appear when an
+  activity is being viewed in the context of a case.  In addition, when using
+  "File on case", the case defaults to an open case for the activity target
+  contact if one is available.
 
 ### CiviContribute
 
-- **[CRM-20868](https://issues.civicrm.org/jira/browse/CRM-20868) set invoice_number at contribution->create, not invoice creation ([10681](https://github.com/civicrm/civicrm-core/pull/10681))**
+- **[CRM-20868](https://issues.civicrm.org/jira/browse/CRM-20868) set
+  invoice_number at contribution->create, not invoice creation
+  ([10681](https://github.com/civicrm/civicrm-core/pull/10681))**
 
-### CiviCase, Core CiviCRM
+  Every contribution now comes with an invoice number regardless of whether an
+  invoice has been generated.
 
-- **[CRM-21367](https://issues.civicrm.org/jira/browse/CRM-21367) Get help section out of container ([11156](https://github.com/civicrm/civicrm-core/pull/11156))**
+- **[CRM-21354](https://issues.civicrm.org/jira/browse/CRM-21354) Allow
+  "Advanced Search" to search for recurring contribution status
+  ([11080](https://github.com/civicrm/civicrm-core/pull/11080))**
 
-### CiviCRM Search
+  Recurring contribution status is now searchable in Advanced Search.
 
-- **[CRM-21354](https://issues.civicrm.org/jira/browse/CRM-21354) Allow "Advanced Search" to search for recurring contribution status ([11080](https://github.com/civicrm/civicrm-core/pull/11080))**
+- **[CRM-21346](https://issues.civicrm.org/jira/browse/CRM-21346) Make pledge
+  installment count & amount exportable
+  ([11194](https://github.com/civicrm/civicrm-core/pull/11194))**
 
-### CiviPledge
+  The number of installments and original installment amount fields for pledges
+  are now exportable from the pledge search.
 
-- **[CRM-21346](https://issues.civicrm.org/jira/browse/CRM-21346) Make pledge installment count & amount exportable ([11194](https://github.com/civicrm/civicrm-core/pull/11194))**
+- **[CRM-21287](https://issues.civicrm.org/jira/browse/CRM-21287) Add Financial
+  Type to "Contributions by Household" report
+  ([11106](https://github.com/civicrm/civicrm-core/pull/11106))**
+
+  The "Contributions by Household" report now has the option to display and/or
+  filter by financial type.
 
 ### CiviMail
+
+- **[CRM-20919](https://issues.civicrm.org/jira/browse/CRM-20919) Adjust
+  Mailing.create api for creating Completed mailings
+  ([10707](https://github.com/civicrm/civicrm-core/pull/10707))**
+
+  Completed mailings can now be imported via the API.
 
 - **[CRM-21231](https://issues.civicrm.org/jira/browse/CRM-21231) On CiviMail
   screen make 'Review and Schedule' tab active if required fields are filled
@@ -98,39 +149,11 @@ Released December 6, 2017
   is disabled at first.  Now, the tab link becomes active when the first tab is
   complete.
 
-- **[CRM-21335](https://issues.civicrm.org/jira/browse/CRM-21335) CiviMail recipient field isn't marked as required ([11185](https://github.com/civicrm/civicrm-core/pull/11185))**
+- **[CRM-21282](https://issues.civicrm.org/jira/browse/CRM-21282) Improve
+  ordering of CiviMail click reporting
+  ([11099](https://github.com/civicrm/civicrm-core/pull/11099))**
 
-### NYSS
-
-- **[CRM-21336](https://issues.civicrm.org/jira/browse/CRM-21336) Custom file fields should display file name without hash ([11166](https://github.com/civicrm/civicrm-core/pull/11166))**
-
-### CiviCase
-
-- **[CRM-20078](https://issues.civicrm.org/jira/browse/CRM-20078) Activity card - General ([11159](https://github.com/civicrm/civicrm-core/pull/11159))**
-
-### Dedupe
-
-- **[CRM-21291](https://issues.civicrm.org/jira/browse/CRM-21291) Confirm this code is not used & remove ([11116](https://github.com/civicrm/civicrm-core/pull/11116))**
-
-### CiviCRM API
-
-- **[CRM-20919](https://issues.civicrm.org/jira/browse/CRM-20919) Adjust Mailing.create api for creating Completed mailings ([10707](https://github.com/civicrm/civicrm-core/pull/10707))**
-
-### CiviContribute, CiviReport
-
-- **[CRM-21287](https://issues.civicrm.org/jira/browse/CRM-21287) Add Financial Type to "Contributions by Household" report ([11106](https://github.com/civicrm/civicrm-core/pull/11106))**
-
-### Test suite
-
-- **[CRM-21249](https://issues.civicrm.org/jira/browse/CRM-21249) Google Geocode limit breaks Jenkins test ([11058](https://github.com/civicrm/civicrm-core/pull/11058))**
-
-### CiviEvent
-
-- **[CRM-12167](https://issues.civicrm.org/jira/browse/CRM-12167) Add support for admin-only fee / price field value options ([11073](https://github.com/civicrm/civicrm-core/pull/11073))**
-
-### Internationalisation
-
-- **[CRM-21268](https://issues.civicrm.org/jira/browse/CRM-21268) Missing French overseas departments. ([11076](https://github.com/civicrm/civicrm-core/pull/11076))**
+  The click report summary now orders links by the descending number of clicks.
 
 ### Drupal Integration Modules
 
@@ -142,11 +165,13 @@ Released December 6, 2017
   to the CMS database connection details.  This matches the process on
   WordPress.
 
-- **[CRM-21371](https://issues.civicrm.org/jira/browse/CRM-21371) An api error when calling drush cvapi should be treated as a drush error ([503](https://github.com/civicrm/civicrm-drupal/pull/503))**
-
 ## <a name="bugs"></a>Bugs resolved
 
 ### CiviMail
+
+- **[CRM-21335](https://issues.civicrm.org/jira/browse/CRM-21335) CiviMail
+  recipient field isn't marked as required
+  ([11185](https://github.com/civicrm/civicrm-core/pull/11185))**
 
 - **[CRM-21508](https://issues.civicrm.org/jira/browse/CRM-21508) civicrm_mailing.created_date information passed to Doctor When is incorrect ([11361](https://github.com/civicrm/civicrm-core/pull/11361))**
 
@@ -155,6 +180,21 @@ Released December 6, 2017
 - **[CRM-21284](https://issues.civicrm.org/jira/browse/CRM-21284) Outdated link to mail setup documentation ([11104](https://github.com/civicrm/civicrm-core/pull/11104))**
 
 ### Core CiviCRM
+
+- **[CRM-21275](https://issues.civicrm.org/jira/browse/CRM-21275) Fatal error
+  without message should recommend bug-reporting page, instead of deprecated
+  forum ([11084](https://github.com/civicrm/civicrm-core/pull/11084))**
+
+- **[CRM-21336](https://issues.civicrm.org/jira/browse/CRM-21336) Custom file
+  fields should display file name without hash
+  ([11166](https://github.com/civicrm/civicrm-core/pull/11166))**
+
+- **[CRM-21268](https://issues.civicrm.org/jira/browse/CRM-21268) Missing French
+  overseas departments.
+  ([11076](https://github.com/civicrm/civicrm-core/pull/11076))**
+
+  The French overseas departments Wallis-et-Futuna and Nouvelle-Calédonie are
+  now available in the State/Province list.
 
 - **Fix for mysql 5.7 crash due to not adding ANY_VALUE ([11346](https://github.com/civicrm/civicrm-core/pull/11346))**
 
@@ -266,6 +306,14 @@ Released December 6, 2017
 
 - **[CRM-21212](https://issues.civicrm.org/jira/browse/CRM-21212) Get E2E Tests working on wordpress ([11017](https://github.com/civicrm/civicrm-core/pull/11017))**
 
+### CiviCase
+
+- **[CRM-21367](https://issues.civicrm.org/jira/browse/CRM-21367) Get help
+  section out of container
+  ([11156](https://github.com/civicrm/civicrm-core/pull/11156))**
+
+  Help text on the case types screen is now outside of the CiviCRM content block.
+
 ### CiviContribute
 
 - **[CRM-21062](https://issues.civicrm.org/jira/browse/CRM-21062) Remove Tax
@@ -281,6 +329,11 @@ Released December 6, 2017
 
 ### CiviEvent
 
+- **[CRM-21149](https://issues.civicrm.org/jira/browse/CRM-21149) On Event
+  Registration Form, cannot target the text "(including yourself)" using word
+  replacement because the parenthesis is outside the ts markers
+  ([10942](https://github.com/civicrm/civicrm-core/pull/10942))**
+
 - **[CRM-21327](https://issues.civicrm.org/jira/browse/CRM-21327) Not able to change Payment Processor in event fees ([11153](https://github.com/civicrm/civicrm-core/pull/11153))**
 
 ### Drupal Integration Modules
@@ -291,6 +344,10 @@ Released December 6, 2017
 
   Items added to the `page-footer` region would appear in the header in Drupal 8
   sites.
+
+- **[CRM-21371](https://issues.civicrm.org/jira/browse/CRM-21371) An api error
+  when calling drush cvapi should be treated as a drush error
+  ([503](https://github.com/civicrm/civicrm-drupal/pull/503))**
 
 - **[CRM-21272](https://issues.civicrm.org/jira/browse/CRM-21272) CMSUser has Drupal 6/7 code that breaks when using with Drupal 8 ([11145](https://github.com/civicrm/civicrm-core/pull/11145), [11139](https://github.com/civicrm/civicrm-core/pull/11139), and [11079](https://github.com/civicrm/civicrm-core/pull/11079))**
 
@@ -335,6 +392,21 @@ Released December 6, 2017
 - **[CRM-20710](https://issues.civicrm.org/jira/browse/CRM-20710) Add function
   to return all valid types
   ([10486](https://github.com/civicrm/civicrm-core/pull/10486))**
+
+- **[CRM-21291](https://issues.civicrm.org/jira/browse/CRM-21291) Confirm this
+  code is not used & remove
+  ([11116](https://github.com/civicrm/civicrm-core/pull/11116))**
+
+- **[CRM-21249](https://issues.civicrm.org/jira/browse/CRM-21249) Google Geocode
+  limit breaks Jenkins test
+  ([11058](https://github.com/civicrm/civicrm-core/pull/11058))**
+
+- **[CRM-12167](https://issues.civicrm.org/jira/browse/CRM-12167) Add support
+  for admin-only fee / price field value options
+  ([11073](https://github.com/civicrm/civicrm-core/pull/11073)) (related
+  cleanup)**
+
+  This change regenerates the DAO checksum.
 
 ## <a name="credits"></a>Credits
 
